--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bensampo/laravel-enum",
+    "name": "mik009/laravel-enum",
     "type": "library",
     "description": "Simple, extensible and powerful enumeration implementation for Laravel.",
     "keywords": [
